# stm32f746g-disc

./: .travis.yml  Cargo.toml  README.md
examples/: blinky.rs
src/: i2c.rs  lib.rs  system_clock.rs
src/gpio/: mod.rs  port.rs
src/init/: mod.rs
src/lcd/: init.rs  mod.rs
