[package]
edition = "2018"
# The original author Philipp Oppermann <dev@phil-opp.com>
# I am listing myself as maintainer of this fork.
authors = ["Mathias Brossard <mathias@brossard.org>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F746G-DISCOVERY microcontroller board"
keywords = [
    "arm",
    "cortex-m",
    "bsp",
]
name = "stm32f746g-disc"
version = "0.1.0"
readme = "README.md"

[dependencies]
arrayvec = { version = "0.5.1", default-features = false }
bitflags = "1.2.1"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
font8x8 = { version = "0.2.5", default-features = false, features = ["unicode"] }
spin = "0.5.2"
stm32f7 = { version = "0.3.2", features = ["stm32f7x6", "rt"] }
stm32f7xx-hal = { version = "0.1.0", default-features = false, features = ["rt", "stm32f746"] }

[dev-dependencies]
cortex-m-semihosting = "0.3.0"

[profile.dev]
debug = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true
opt-level = "z"
incremental = false
